fix icon background and spacing

--- a/src/app/auth/signin/signin-style.css
+++ b/src/app/auth/signin/signin-style.css
@@ -1,11 +1,9 @@
 .main-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   min-height: 100vh; 
   width: 100%; 
   background-color: #f8f9fa; 
-  margin: 0; 
 }
 
 .card-custom {
@@ -18,6 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-top: 160px;
 }
 
 .card-custom .card-body {
@@ -60,7 +59,7 @@
 }
 
 .input-group-text {
-  background-color: #f8f9fa;
+  background-color: #d4dce5;
   border: none;
 }
 
